--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.21 1999/07/11 18:51:27 tomh Exp $
+# $Id: Makefile.in,v 1.22 1999/07/13 23:46:30 db Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -54,6 +54,7 @@ SRCS = \
 	s_zip.c \
 	scache.c \
 	send.c \
+        sprintf_irc.c \
 	support.c \
 	whowas.c
 
