- committed sidewnders changes to kline file handling   we'll have to clean this up - committed listener P line change code in s_conf.c

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.53 1999/07/08 21:31:29 db Exp $
+ * $Id: config.h.dist,v 1.54 1999/07/17 02:31:56 db Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -82,7 +82,8 @@
  * MPATH = MOTD
  * APATH = alternate MOTD for multi-lingual servers
  * i.e. /motd A for second motd
- * KPATH = kline conf file 
+ * KPATH = kline conf file
+ * DLPATH = dline conf file
  *
  * OPER_MOTD = if defined display an oper motd to opers 
  * when they oper up.
@@ -103,6 +104,7 @@
 #define SPATH   "/usr/local/ircd/ircd"
 #define	CPATH	"ircd.conf"
 #define KPATH   "kline.conf"
+#define DLPATH "kline.conf"
 #define	MPATH	"ircd.motd"
 #undef  APATH
 #define	LPATH	"ircd.log"
@@ -111,27 +113,6 @@
 
 #define OPER_MOTD
 #define OMOTD   "opers.motd"
-
-/* DLINES_IN_KPATH - put (/quote) DLINES in your KPATH file.
- * Define this if you want DLINES in your KPATH file.  Otherwise DLINES
- * will be added to the main ircd.conf
- */
-#ifdef KPATH
-#undef DLINES_IN_KPATH
-#endif /* KPATH */
-
-/* LOCKFILE - Exclusive use of ircd.conf and kline.conf during writes
- *
- * This creates a lockfile prior to writes to ircd.conf or kline.conf, and
- * can be used in conjunction with viconf (included in the tools directory).
- * This prevents loss of data when klines are added while someone is manually
- * editting the file.  File writes will be retried at the next KLINE, DLINE,
- * REHASH, or after CHECK_PENDING_KLINES minutes have elapsed.
- *
- * If you do not wish to use this feature, leave LOCKFILE #undef 
- */
-#define LOCKFILE "ircd.conf.lock"
-#define	CHECK_PENDING_KLINES	10	/* in minutes */
 
 /* TS_MAX_DELTA and TS_WARN_DELTA -  allowed delta for TS when another
  * server connects.
