--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.26 1999/07/18 02:08:13 db Exp $
+# $Id: Makefile.in,v 1.27 1999/07/18 07:00:26 tomh Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -29,6 +29,7 @@ SRCS = \
 	fdlist.c \
 	fileio.c \
 	hash.c \
+	irc_string.c \
 	ircd.c \
 	list.c \
 	listener.c \
@@ -56,7 +57,6 @@ SRCS = \
 	scache.c \
 	send.c \
         sprintf_irc.c \
-	support.c \
 	whowas.c
 
 #
@@ -75,6 +75,7 @@ SRCS = \
 #	fdlist.o \
 #	fileio.o \
 #	hash.o \
+#	irc_string.o \
 #	ircd.o \
 #	list.o \
 #	listener.o \
