Work on char attributes for nick names, changed isvalid macro Const correctness changes Fixed file close bug on successful read Header cleanups Checked all usage of sprintf_irc for correctness, added terms where needed

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.27 1999/07/18 07:00:26 tomh Exp $
+# $Id: Makefile.in,v 1.28 1999/07/19 09:11:43 tomh Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -130,7 +130,7 @@ depend:
 	${MKDEP} ${CPPFLAGS} ${SRCS} > .depend
 
 clean:
-	${RM} -f ${OBJS} *~ ircd.core core ircd 
+	${RM} -f *.o *~ ircd.core core ircd 
 
 distclean: clean
 	${RM} -f Makefile version.c.last
