new file m_pass start untangling m_server

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.32 1999/07/24 19:35:50 tomh Exp $
+# $Id: Makefile.in,v 1.33 1999/07/25 05:32:56 tomh Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -36,6 +36,7 @@ SRCS = \
 	m_gline.c \
 	m_info.c \
 	m_kline.c \
+	m_pass.c \
 	m_unkline.c \
 	match.c \
 	motd.c \
@@ -82,6 +83,7 @@ SRCS = \
 #	m_gline.o \
 #	m_info.o \
 #	m_kline.o \
+#	m_pass.o \
 #	m_unkline.o \
 #	match.o \
 #	motd.o \
