cleanup some conf stuff dealing with connects

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.34 1999/07/25 18:01:45 tomh Exp $
+# $Id: Makefile.in,v 1.35 1999/07/26 05:34:42 tomh Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -33,6 +33,7 @@ SRCS = \
 	ircd_signal.c \
 	list.c \
 	listener.c \
+	m_connect.c \
 	m_gline.c \
 	m_info.c \
 	m_kline.c \
@@ -82,6 +83,7 @@ SRCS = \
 #	ircd_signal.o \
 #	list.o \
 #	listener.o \
+#	m_connect.o \
 #	m_gline.o \
 #	m_info.o \
 #	m_kline.o \
