- removed usrip - moved pieces of m_user.c into m_away.c, m_ison.c, m_oper.c m_ping.c m_pong.c

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.40 1999/07/29 07:11:47 tomh Exp $
+# $Id: Makefile.in,v 1.41 1999/07/30 03:25:50 db Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -32,16 +32,21 @@ SRCS = \
 	ircd_signal.c \
 	list.c \
 	listener.c \
+	m_away.c \
 	m_capab.c \
 	m_connect.c \
 	m_error.c \
 	m_gline.c \
 	m_info.c \
+	m_ison.c \
 	m_help.c \
 	m_kline.c \
 	m_links.c \
 	m_lusers.c \
+	m_oper.c \
 	m_pass.c \
+	m_ping.c \
+	m_pong.c \
 	m_server.c \
 	m_squit.c \
 	m_stats.c \
