--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.42 1999/07/30 03:47:16 db Exp $
+# $Id: Makefile.in,v 1.43 1999/07/30 03:52:32 db Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -56,6 +56,7 @@ SRCS = \
 	m_version.c \
 	m_wallops.c \
 	m_who.c \
+	m_whois.c \
 	match.c \
 	motd.c \
 	mtrie_conf.c \
