--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.44 1999/07/30 04:01:31 tomh Exp $
+# $Id: Makefile.in,v 1.45 1999/07/30 06:40:11 tomh Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -32,6 +32,7 @@ SRCS = \
 	ircd_signal.c \
 	list.c \
 	listener.c \
+	m_admin.c \
 	m_away.c \
 	m_capab.c \
 	m_close.c \
@@ -39,22 +40,29 @@ SRCS = \
 	m_die.c \
 	m_error.c \
 	m_gline.c \
+	m_htm.c \
 	m_info.c \
 	m_ison.c \
 	m_help.c \
 	m_kline.c \
 	m_links.c \
 	m_locops.c \
+	m_ltrace.c \
 	m_lusers.c \
 	m_operwall.c \
 	m_oper.c \
 	m_pass.c \
 	m_ping.c \
 	m_pong.c \
+	m_rehash.c \
+	m_restart.c \
 	m_server.c \
+	m_set.c \
 	m_squit.c \
 	m_stats.c \
 	m_svinfo.c \
+	m_time.c \
+	m_trace.c \
 	m_unkline.c \
 	m_users.c \
 	m_version.c \
@@ -102,6 +110,7 @@ SRCS = \
 #	ircd_signal.o \
 #	list.o \
 #	listener.o \
+#	m_admin.o \
 #	m_away.o \
 #	m_capab.o \
 #	m_close.o \
@@ -109,18 +118,27 @@ SRCS = \
 #	m_die.o \
 #	m_error.o \
 #	m_gline.o \
+#	m_htm.o \
 #	m_help.o \
 #	m_info.o \
 #	m_kline.o \
 #	m_links.o \
 #	m_locops.o \
+#	m_ltrace.o \
 #	m_lusers.o \
 #	m_operwall.o \
 #	m_pass.o \
+#	m_ping.o \
+#	m_pong.o \
+#	m_rehash.o \
+#	m_restart.o \
 #	m_server.o \
+#	m_set.o \
 #	m_squit.o \
 #	m_stats.c \
 #	m_svinfo.o \
+#	m_time.o \
+#	m_trace.o \
 #	m_unkline.o \
 #	m_users.o \
 #	m_version.o \
