- moved FLUD code from s_user.c into flud.c/flud.h

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.47 1999/07/30 20:10:51 tomh Exp $
+# $Id: Makefile.in,v 1.48 1999/07/30 21:31:58 db Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -26,6 +26,7 @@ SRCS = \
 	dline_conf.c \
 	fdlist.c \
 	fileio.c \
+	flud.c \
 	hash.c \
 	irc_string.c \
 	ircd.c \
