--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.51 1999/07/31 02:42:55 tomh Exp $
+# $Id: Makefile.in,v 1.52 1999/07/31 04:05:51 db Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -50,6 +50,7 @@ SRCS = \
 	m_locops.c \
 	m_ltrace.c \
 	m_lusers.c \
+	m_message.c \
 	m_mode.c \
 	m_operwall.c \
 	m_oper.c \
