new s_log, nothing there yet but soon

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.52 1999/07/31 04:05:51 db Exp $
+# $Id: Makefile.in,v 1.53 1999/07/31 04:13:54 tomh Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -86,6 +86,7 @@ SRCS = \
 	s_bsd.c \
 	s_conf.c \
 	s_debug.c \
+	s_log.c \
 	s_misc.c \
 	s_serv.c \
 	s_stats.c \
@@ -164,6 +165,7 @@ SRCS = \
 #	s_bsd.o \
 #	s_conf.o \
 #	s_debug.o \
+#	s_log.o \
 #	s_misc.o \
 #	s_numeric.o \
 #	s_serv.o \
