- moved m_kill out of s_user.c

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.53 1999/07/31 04:13:54 tomh Exp $
+# $Id: Makefile.in,v 1.54 1999/07/31 04:48:03 db Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -45,6 +45,7 @@ SRCS = \
 	m_info.c \
 	m_ison.c \
 	m_help.c \
+	m_kill.c \
 	m_kline.c \
 	m_links.c \
 	m_locops.c \
